--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,11 @@ html, body {
     margin: 1.4em;
 }
 
+.buy a {
+    all: unset;
+    cursor:pointer;
+}
+
 .cover {
     position: absolute;
     top: 50%;
@@ -99,6 +104,7 @@ html, body {
     opacity: 0;
     animation: appear-text 0.0001s linear forwards;
     animation-delay: 2.5s;
+    z-index: 1;
 
 }
 
@@ -111,6 +117,8 @@ html, body {
     font-family: Poppins;
     text-transform: uppercase;
     letter-spacing: 4px;
+    z-index: 2;
+
 }
 
 #name {
@@ -131,8 +139,6 @@ html, body {
     border-radius: 50%;
     border: 1px solid rgba(255, 255, 255, 0.3);
     padding: 2em;
-    cursor: pointer !important;
-    z-index: 15;
 }
 
 .about {
@@ -155,8 +161,6 @@ html, body {
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size: 10px;
-    cursor: pointer !important;
-    z-index: 15;
 }
 
 .about span:hover {
@@ -213,6 +217,11 @@ html, body {
     text-decoration: underline;
 }
 
+.more a {
+    all: unset;
+    cursor:pointer;
+}
+
 .block-cover {
     position: absolute;
     top: 50%;
@@ -264,6 +273,7 @@ html, body {
     position: absolute;
     width: 100%;
     height: 50vh;
+    z-index: -1;
 }
 
 .upper-block::after {
@@ -283,6 +293,7 @@ html, body {
     top: 50%;
     height: 50vh;
     width: 100%;
+    z-index: -1;
 }
 
 .block-bottom::after {
@@ -296,3 +307,4 @@ html, body {
     animation: rev-block 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
     animation-delay: 3.6s;
 }
+
